--- a/src/Wf3/TicketBundle/Resources/views/Default/main.html.twig
+++ b/src/Wf3/TicketBundle/Resources/views/Default/main.html.twig
@@ -23,28 +23,8 @@
 {% block javascripts %}
 {{ parent() }}
 <script>
-
-    function updateTickets(){
-        $.ajax({
-            url: "{{ url('wf3_ticket_current_ticket') }}",
-            success: function(response){
-                $("#current_tickets").html(response);
-            }
-        });
-    }
-
-    $("body").on("click", "a.resolve_btn", function(e){
-        e.preventDefault();
-        var href = $(this).attr("href");
-        $.ajax({
-            url: href,
-            success: function(response){
-                updateTickets();
-            }
-        });
-    });
-
-    window.setInterval(updateTickets, 3000);
-
+//utilisé dans main.js
+var updateTicketsUrl = "{{ url('wf3_ticket_current_ticket') }}";
 </script>
+<script src="{{asset('js/main.js')}}"></script>
 {% endblock %}
