--- a/src/Wf3/TicketBundle/Resources/views/Default/home.html.twig
+++ b/src/Wf3/TicketBundle/Resources/views/Default/home.html.twig
@@ -1,7 +1,25 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-<h3>Connectez-vous avec votre prénom en minuscule</h3>
-Mot de passe : yo<br />
-<a href="{{ url('wf3_ticket_main') }}" class="btn btn-success">Connexion</a>
+<div class="panel">
+    <form action="{{ path('login_check') }}" method="post" class="form-horizontal">
+        <div class="form-group">
+            <label for="username">Login :</label>
+            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        </div>
+        <div class="form-group">
+            <label for="password">Mot de passe :</label>
+            <input type="password" id="password" name="_password" />
+        </div>
+        {#
+            Si vous voulez contrôler l'URL vers laquelle l'utilisateur est redirigé en cas de succès
+            (plus de détails ci-dessous)
+        #}
+            <input type="hidden" name="_target_path" value="{{ url('wf3_ticket_main') }}" />
+        <button type="submit">login</button>
+        {% if error %}
+            <div>{{ error.message }}</div>
+        {% endif %}
+    </form>
+</div>
 {% endblock %}
