ajout d'un peu de mise en forme

--- a/src/Wf3/TicketBundle/Resources/views/Form/fields.html.twig
+++ b/src/Wf3/TicketBundle/Resources/views/Form/fields.html.twig
@@ -1,5 +1,12 @@
 {% extends 'form_div_layout.html.twig' %}
  
+ {% block button_widget -%}
+    {% if label is empty -%}
+        {% set label = name|humanize %}
+    {%- endif -%}
+    <button class="btn btn-info" type="{{ type|default('button') }}" {{ block('button_attributes') }}>{{ label|trans({}, translation_domain) }}</button>
+{%- endblock button_widget %}
+
 {# On commence par simplement ajouter le form-group au row de nos formulaires #}
 {% block form_row %}
 {% spaceless %}
