--- a/src/Wf3/TicketBundle/Resources/views/Default/current_ticket.html.twig
+++ b/src/Wf3/TicketBundle/Resources/views/Default/current_ticket.html.twig
@@ -1,8 +1,8 @@
 {% if tickets %}
 	<table class="table table-hover">
 		<tr>
-			<th>Date</th>
-			<th>Étudiant(e)</th>
+			<th>Créé à</th>
+			<th>Par</th>
 			<th>Commentaire</th>
 			<th>Actions</th>
 		</tr>
@@ -23,7 +23,7 @@
 	    	<td>{{ticket.note}}</td>
 	    	<td>
 	        {% if app.user.username == ticket.student or is_granted('ROLE_ADMIN') %}
-	        <a class="resolve_btn btn btn-info btn-xs" data-ticket_id="{{ticket.id}}" href="{{ url('wf3_ticket_mark_as_resolve', {'id' : ticket.id}) }}"><span class="glyphicon glyphicon-ok-sign"></span> Résolu</a>
+	        <a class="resolve_btn btn btn-info btn-xs" data-ticket_id="{{ticket.id}}" href="{{ url('wf3_ticket_mark_as_resolve', {'id' : ticket.id}) }}"><span class="glyphicon glyphicon-ok-sign"></span> OK !</a>
 	        {% endif %}
 	        </td>
 	    </tr>
