--- a/src/Wf3/TicketBundle/Resources/views/Default/home.html.twig
+++ b/src/Wf3/TicketBundle/Resources/views/Default/home.html.twig
@@ -1,22 +1,23 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-<div class="panel">
-    <form action="{{ path('login_check') }}" method="post" class="form-horizontal">
+<div class="row">
+    <h1>Tickets !</h1>
+    <form action="{{ path('login_check') }}" method="post">
         <div class="form-group">
-            <label for="username">Login :</label>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+            <label for="username" class="control-label">Login :</label>
+            <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" />
         </div>
         <div class="form-group">
-            <label for="password">Mot de passe :</label>
-            <input type="password" id="password" name="_password" />
+            <label for="password" class="control-label">Mot de passe :</label>
+            <input type="password" class="form-control" id="password" name="_password" />
         </div>
         {#
             Si vous voulez contrôler l'URL vers laquelle l'utilisateur est redirigé en cas de succès
             (plus de détails ci-dessous)
         #}
             <input type="hidden" name="_target_path" value="{{ url('wf3_ticket_main') }}" />
-        <button type="submit">login</button>
+        <button type="submit" class="btn btn-info">login</button>
         {% if error %}
             <div>{{ error.message }}</div>
         {% endif %}
