--- a/src/Wf3/TicketBundle/Resources/views/Default/home.html.twig
+++ b/src/Wf3/TicketBundle/Resources/views/Default/home.html.twig
@@ -1,7 +1,7 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-<div class="row">
+<div class="row col col-xs-10 col-md-6 text-center">
     <h1>Tickets !</h1>
     <form action="{{ path('login_check') }}" method="post">
         <div class="form-group">
@@ -23,4 +23,5 @@
         {% endif %}
     </form>
 </div>
+
 {% endblock %}
