ajout protection strip_tags et tests sons

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,7 @@
         </div>
         {% block javascripts %}
         <script src="{{ asset('js/jquery.min.js') }}"></script>
+        <script src="{{ asset('js/jBeep/jBeep.min.js') }}" ></script>
         {% endblock %}
     </body>
 </html>
