Sounds added and working

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,6 +13,7 @@
         <div class="container">
         {% block body %}{% endblock %}
         </div>
+        <audio id="beep" src="{{ asset('sounds/beep.ogg') }}"></audio>
         {% block javascripts %}
         <script src="{{ asset('js/jquery.min.js') }}"></script>
         <script src="{{ asset('js/jBeep/jBeep.min.js') }}" ></script>
