added some style

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Des problèmes ?{% endblock %}</title>
         {% block stylesheets %}
+        <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
         <link type="text/css" rel="stylesheet" href="{{asset('css/bootstrap.min.css')}}">
         <link type="text/css" rel="stylesheet" href="{{ asset('css/styles.css') }}" />
         {% endblock %}
