Added count by day functions

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
         <div class="container">
         {% block body %}{% endblock %}
         </div>
-        <audio id="beep" src="{{ asset('sounds/beep.ogg') }}"></audio>
+        <audio id="beep" src="{{ asset('sounds/0396.ogg') }}"></audio>
         {% block javascripts %}
         <script src="{{ asset('js/jquery.min.js') }}"></script>
         {% endblock %}
